--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "~13.3.0",
     "@syncfusion/ej2-angular-grids": "^20.2.49",
     "angular-in-memory-web-api": "^0.13.0",
+    "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
