--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@syncfusion/ej2-angular-buttons": "^20.2.46",
+    "@syncfusion/ej2-angular-dropdowns": "^20.2.50",
     "@syncfusion/ej2-angular-grids": "^20.2.49",
+    "@syncfusion/ej2-angular-popups": "^20.2.49",
+    "@syncfusion/ej2-angular-splitbuttons": "^20.2.45",
     "angular-in-memory-web-api": "^0.13.0",
     "bootstrap": "^5.2.1",
     "font-awesome": "^4.7.0",
